Changelog
=========

1.2.2 (unreleased)
------------------

- Nothing changed yet.


1.2.1 (2013-01-17)
------------------

- add upgrade to install cirb blog
- integrate cirb.blog


1.2 (2012-12-28)
----------------

- Add monitoring.


1.1 (2012-12-06)
----------------

- Nothing changed yet.


1.0 (2012-12-05)
----------------

- Package created using templer
  []