@@ -4,7 +4,8 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Install other dependencies: twittermultistream, diggdigg, categories,
+  oembed and socialnetworks
 
 
 1.2.1 (2013-01-17)
